# notebooks

./: .gitignore  README.md  pyproject.toml
kaggle/: disaster-tweets-classif-1-embe-with-lr-and-rf.ipynb  disaster-tweets-classif-2-embeddings-in-lin-n.ipynb  mnist-digits-classification-extended-torch-cnn.ipynb  mnist-digits-classification-simple-torch-cnn.ipynb  nlp-disaster-tweets-eda.ipynb  plant-seedlings-class-from-img-pytorch-cnn.ipynb
neural_networks/: create_word2vec_embedding_with_gensim_from_150novels.ipynb  custom_torch_cbow_embeddings_from_150novels.ipynb  custom_torch_cbow_embeddings_from_wikitext2.ipynb  custom_torch_cbow_embeddings_from_wikitext3.ipynb  nlp_data_analysis_cleaning_preprocessing_lstm_sentiment_analysis_imdb.ipynb  pretrained_word2vec_google_news_gensim_model.ipynb  simple_torch_lstm_word_generator_from_wikitext2.ipynb  simple_torch_ngram_embeddings_from_example_text.ipynb  torch_cnn_for_mnist_classification.ipynb  torch_generate_digits_with_CNN_GAN_from_mnist.ipynb  torch_generate_digits_with_linear_NN_GAN_from_mnist.ipynb  torch_lstm_rnn_for_family_name_language_prediction_padding.ipynb  torch_lstm_rnn_for_family_name_language_prediction_var_batch_length.ipynb  torch_rnn_example_with_LSTM_padding.ipynb  torch_simple_linear_nn_for_iris_classification.ipynb  torch_vanilla_rnn_for_family_name_language_prediction.ipynb
