[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Johannes <stopwhispering314@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
nltk = "^3.8.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchtext = "^0.15.2"
torchviz = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
