[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Johannes <stopwhispering314@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
nltk = "^3.8.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchtext = "^0.15.2"
torchviz = "^0.0.2"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
gensim = "^4.3.2"
wordcloud = "^1.9.2"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
plotly = "^5.17.0"
#tokenizers = "^0.14.0"
tokenizers = "*"  # avoid problem with transformers; HuggingFace doesn't get its versions rigt
transformers = "*"
sentence-transformers = "^2.2.2"
opencv-python = "^4.8.0.76"
albumentations = "^1.3.1"
missingno = "^0.5.2"
pydicom = "^2.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
